css/workitem.css
/* ... */
.commentZone{
    margin-top:18px;
    width:418px;
}

/* style analytics info */
#analytics {
    position:absolute;
    left:14px;
    width:85px;
    background:#FFFFDD url(../images/analytics-bg.gif) 100% 0 repeat-y;
    margin-left:-85px;
    color:#FFF;
    line-height:1.4;
}
#analytics p {
    font-size:0.9em;
    padding:10px;
    margin:0;
    font-weight:bold;
    text-align:right;
}
#analytics span {
    display:block;
    font-weight:normal;
}

/* bid info popup (accepting, withdrawing bids)*/
.block{
    display: block;
}
#popup-bid-info #left-column, #popup-bid-info #right-column{
    float: left;
    margin-bottom: 15px;
}
#popup-bid-info #left-column{
    margin-right: 10px;
}

#popup-bid-info #user-stats{
    margin-top: 10px;
    width: 370px;
}

#popup-bid-info #user-stats th,
#popup-bid-info #user-stats td{
    text-align: center;
    border-width:1px;
}
.loader{
    display: none;
}

/* journalChat styles */
#journalChat {
    height:15em;
    overflow:auto;
}
#journalChat .entry {
    margin-bottom:8px;
}
#journalChat .entry-author {
    font-weight:bold;
    margin-right:7px;
}
#journalChat h2, #journalChat div {
    font-size:12px;
    line-height:1.4;
    margin:0 -5px;
    padding:0px 5px;
}
#journalChat h2 {
    padding:3px 5px 2px;
    margin-bottom:2px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
}
/* color entries */
#journalChat .entry h2 {
    background-color:#ccc;
    color: #444;
}
#journalChat .entry h2.extra {
    background-color: #E5E5E5;
}
#journalChat .entry h2.other {
    background-color: #CCC6B0;
}
#journalChat .entry h2.extra.other {
    background-color: #E6DFC6;
}
#journalChat .entry.sendlove h2 {
    background-color:#D24B3F;
    color: #601710;
}
#journalChat .entry.svn h2 {
    background-color:#DBDB6E;
    color: #4F4F28;
}
#journalChat .entry.worklist h2 {
    background-color:#5488D1;
    color: #1F3C66;
}
#journalChat .entry.bot h2 {
    background-color:#D98D4B;
    color: #54371D;
}
#wFees {
  display: none;
}
.feesum {
    cursor: pointer;
}
#feesToolTip {
  display: none;
}

.notestext {
    margin:0;
    margin-top:8px;
    padding-right:5px;

}
#for_view li .notestext a, .comment a {
    color: rgb(0, 118, 252);
}
.reply-lnk a {
    color: rgb(152, 170, 178);
}
#for_view li .notestext a:hover, .comment a:hover {
    text-decoration:none;
}
.button-disabled { opacity: 0.5; -moz-opacity: 0.5; -webkit-opacity: 0.5; }

.removeAttachment  {
    cursor: pointer;
    text-decoration: underline;
}

.floatLeft{
    float:left;
}

.floatRight {
    float:right;
}

.clear{
    clear:both;
}
.bottonAtRight{
    margin-top: -4px;
    float: right;
}

#sent-notify{
    text-align:center;
    background-color:lightgrey;
    height:20px !important;
    line-height:20px;
}

#total-jobs,
#active-jobs {
    color:#98AAB2;
}

#total-jobs,
#active-jobs,
#user-stats span {
    font-weight:bold;
    font-family:helvetica,arial,sans-serif;
    font-size:12px;
}

#skills-list {
    display: block;
    font-size: 12px;
    margin: 5px 0;
}

#skills {
    width: 410px;
    margin: 5px 0;
}

/* Budget info */
#be-block {
    font-size:14px;
    position:absolute;
    z-index:99;
    top:5px;
}

#be-table {
    border: none;
    padding:2px;
}

.be-table_cell1 {
    border: none;
    padding:2px;
}

.be-table_cell2 {
    border: none;
    text-align: right;
    padding:2px;
}
#bidDone,
#bidDoneEdit,
#bidExpires,
#bidExpiresEdit {
    padding: 15px 5px 15px 0;
}

/* slider css */
.timeSlider {
    background-color: #333333;
    border-color: #333333;
    cursor: pointer;
    float: right;
    height: 0;
    margin: 5px 20px 0 0;
    width: 280px;
}

#timeSliderValue {
    width: 60px;
    margin-right: 20px;
}

.timeSlider a {
    height: 7px !important;
    width: 10px !important;
    cursor: pointer !important;
}
.sliderStepsArea {
    position: relative;
    top: -9px;
}
.sliderStep {
    margin-top: 3px;
    border-right: 1px solid gray;
    float: left;
    height: 12px;
    width: 27px;
}
.sliderStepLast {
    border: none;
}
.sliderStepLastEmpty{
    width: 1px;
}
.sliderStepFirst {
    width: 22px;
    margin-left: 3px;
}
.sliderStepValue {
    position: relative;
    top: 16px;
    left: -20px;
    width: 60px;
}
.profile-link{
    cursor: pointer;
}

